--- a/css/style.css
+++ b/css/style.css
@@ -367,6 +367,7 @@ body {
         position: absolute;
         right: 0;
         top: 0;
+         z-index: 9999;
 
     flex-direction: column;
 
